--- a/config/application/permissionservice-dev.yml
+++ b/config/application/permissionservice-dev.yml
@@ -3,23 +3,15 @@ spring:
     name: sxt-config
   main:
     allow-bean-definition-overriding: true
-  cloud:
-    config:
-      label: master
-      server:
-        git:
-          uri: https://github.com/wmy0436/config/config.git
-          search-paths:
-          username: wmy0436
-          password: mY19921220
     bus:
       refresh:
         enabled: true
-#  rabbitmq:
-#    host: www.batgm.com
-#    port: 5672
-#    username: spring_bus
-#    password: spring_bus
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/jjw_user?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
+    username: root
+    password: 123456
+
   zipkin:
     base-url: http://localhost:9411
 
